[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/Menu/Settings.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Fonts/BubblegumSans-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
resource_name = "BalonAni"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Animation/Icon:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 699, 1137 ), Vector2( 699, 380 ) ]
}

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 3 )

[node name="Settings" type="Node2D"]
script = ExtResource( 1 )

[node name="BackButton" type="TouchScreenButton" parent="."]
normal = ExtResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5

[node name="Animation" type="AnimationPlayer" parent="."]
anims/BalonAni = SubResource( 1 )

[node name="Icon" type="Sprite" parent="Animation"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 699, 1137 )
scale = Vector2( 22.9688, 12.9063 )
texture = ExtResource( 2 )

[node name="sfx" type="TouchScreenButton" parent="."]
position = Vector2( 256, 112 )
scale = Vector2( 2.375, 2.125 )
normal = ExtResource( 2 )

[node name="Music" type="TouchScreenButton" parent="."]
position = Vector2( 256, 344 )
scale = Vector2( 2.25, 2.125 )
normal = ExtResource( 2 )

[node name="SoundLabel" type="Label" parent="."]
margin_left = 576.0
margin_top = 152.0
margin_right = 864.0
margin_bottom = 232.0
custom_fonts/font = SubResource( 2 )
text = "Sfx ON"

[node name="MusicLabel" type="Label" parent="."]
margin_left = 576.0
margin_top = 368.0
margin_right = 864.0
margin_bottom = 448.0
custom_fonts/font = SubResource( 2 )
text = "MUSIC ON"

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Music" to="." method="_on_Music_pressed"]
